v1.1.3 2020-3-?
- [Info] Supports Geeklog v2.2.1
- [Improvement] Supports PHP v7.3
- [Feature] Replace with PHP autotags supports extended functionality of PLG_replaceTags (will include plugin and id of item that the autotag is embedded in)
- [Feature] If autotag supports PHP it will be parsed for errors on save (for PHP v7.0.0+ only). If autotag is used that has PHP parse errors it will try to error gracefully

v1.1.2 2017-6-7
- [Info] Supports Geeklog v2.2.0
- [Feature] Support template files for different themes
- [Bug] Fixed upgrade issue and version check
- [Bug] Fixed undefined PHP errors
- [Bug] Removed hardcoded HTML
- [Bug] Fixed Closed tags issue when autotag is being replaced with a PHP function

v1.1.1 2017-6-22
- [Info] Now requires Geeklog v2.1.3
- [Feature] Supports Autotags close tags
- [Feature] Delete confirmation added
- [Feature] Descriptions can now be longer (255 char)
- [Feature] Now uses COM_createHTMLDocument
- [Feature] Supports UTF8mb4 Character Set
- [Feature] Added support for multiple themes
- [Feature] Added templates for Denim theme
- [Bug] Fixed filtering of descriptions so they don't get cut off
- [Bug] Fixed autotag list available to all users 

v1.1.0 2011-06-01
- [Feature] Updated autotag descriptions which are now used with Geeklog 1.8.0
- [Feature] Added autotag usage permissions
- [Feature] Added the ability to use PHP directly in the "Replace With" box
- [Feature] Updated install and upgrade process (now can be autoinstalled)
- [Feature] Uses Geeklog Configuration system
- [Bug] Fixed autotag admin list in IE 8
- [Bug] Fixed autotag list available to all users 

v1.02 2008-09-24
- [Bug] phpautotags_topic() staticpage fix
- [Bug] Clean input better when saving autotag
- [Bug] Admin menus to work in Geeklog 1.5
    
v1.01 2007-03-08
- [Bug] plugin_getListField_autotags() failed to allow php autotags to be checked
- [Bug] stripslashes in plugin_autotags_autotags()
- [Feature] Added lang autotag

v1.0  2006-11-26